# rl

./: .gitignore  CURRENT_PLAN.md  PROMPTS.md  README.md  evaluate.py  pyproject.toml  train.py
configs/: default_dino.yaml
envs/: __init__.py  dino_env.py
scripts/: clean_models.py
tests/: test_dino_env.py
